# brim

./: .gitignore  pyproject.toml
brimstone/: .gitignore  app.py  cli.py  config.py  development.py  pyproject.toml
brimstone/backend/: auth.py  db.py  error_routes.py  htmx.py
brimstone/backend/home/: routes.py
brimstone/backend/login/: forms.py  routes.py
brimstone/seeds/: __init__.py  admins.py
brimstone/static/_src/: input.css
brimstone/static/css/: index.css
brimstone/templates/: base.html.jinja  error.html.jinja  index.html.jinja
brimstone/templates/components/: update.html.jinja
brimstone/templates/login/: index.html.jinja
brimstone/templates/login/components/: login.html.jinja
brimstone/tests/: conftest.py  test_home.py
